--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,7 @@ tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
 teloxide = "0.17"
 ctor = "0.2"
 dptree = "0.5"
-
-teloxide-plugins-macros = { path = "./teloxide-plugins-macros" }
+teloxide-plugins-macros = { version = "0.1.0", path = "./teloxide-plugins-macros" }
 
 [features]
 default = []
