--- a/teloxide-plugins-macros/Cargo.toml
+++ b/teloxide-plugins-macros/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "teloxide-plugins-macros"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 description = "Procedural macros for Teloxide smart plugins"
 license = "MIT"
@@ -13,11 +13,10 @@ proc-macro = true
 proc-macro2 = { version = "1.0", default-features = false, features = ["span-locations"] }
 quote = { version = "1.0", default-features = false }
 syn = { version = "2.0", default-features = false, features = ["full"] }
-ctor = { version = "0.2", optional = true }
-tokio = { version = "1.0", features = ["rt", "rt-multi-thread"] }
+ctor = "0.2"
 
 [features]
-default = ["ctor"]   
+default = []   
 
 [profile.dev]
 opt-level = 2
